syntax = "proto3";

package chat;

message Request{
    string user = 1;
    optional string senha = 2;
    optional string roomName = 3;
}

message Response{
    int32 status = 1;
    string msg = 2;
}

message Vazio { }

service MessageChat{
    rpc Login (Request) returns (Response);
    rpc PromoteToAdmin (Request) returns (Response);
    rpc CreateAccount (Request) returns (Response);
    rpc CreateRoom (Request) returns (Response);    
    rpc Joinroom (Request) returns (Response);
}